--- a/estilo.css
+++ b/estilo.css
@@ -1,14 +1,13 @@
+/* COR DO MODO DE ACESSIBILIDADE*/
 :root {
-  --bg-color: #ffffff;
+  --bg-color: #ff0000;
   --text-color: #111111;
 }
 
+/* COR PADRO DO SITE*/
 [data-acessivel="true"] {
-  --bg-color: #F5F5F5; /* Preto suave */
-  --text-color:  #2E2E2E; /* Cinza claro */
-  
-  
- 
+  --bg-color: #f5f5f5; /* Preto suave */
+  --text-color: #2e2e2e; /* Cinza claro */
 }
 
 body {
@@ -21,8 +20,8 @@ body {
   overflow-x: hidden; /* Evita rolagem lateral */
 }
 
-a{
-  color:#007BFF
+a {
+  color: #007bff;
 }
 
 /* ESTILO DO BOTAO DE ACESSIBILIDADE*/
@@ -30,7 +29,7 @@ a{
 button#acessibilidadeToggle {
   padding: 10px 15px;
   margin: 20px 0;
-  background-color:  #D55E00 ; 
+  background-color: #d55e00;
   color: white;
   border: none;
   border-radius: 5px;
@@ -38,17 +37,7 @@ button#acessibilidadeToggle {
 }
 
 button#acessibilidadeToggle:hover {
-  background-color: #009E73;
-}
-
-
-
-/* Ajuste para o mapa Google */
-.mapaGoogle {
-  max-width: 100%; /* Limita o tamanho ao contêiner */
-  height: auto; /* Ajusta a altura proporcionalmente */
-  display: block; /* Garante que o mapa não cause vazamento */
-  margin: 0 auto; /* Centraliza o mapa */
+  background-color: #009e73;
 }
 
 /* RESPONSIVIDADE COM CELULARES */
@@ -57,8 +46,6 @@ button#acessibilidadeToggle:hover {
     font-size: 19px;
   }
 
-  
-
   .mapaGoogle {
     width: 200%; /* Ajusta o mapa para caber na tela */
     height: 300; /* Define uma altura fixa */
@@ -66,8 +53,6 @@ button#acessibilidadeToggle:hover {
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
- 
-
   .mapaGoogle {
     width: 100%; /* Ajusta o mapa para caber na tela */
     height: 380px; /* Define uma altura fixa */
@@ -82,6 +67,4 @@ button#acessibilidadeToggle:hover {
   .menu {
     display: none;
   }
-
- 
 }
