--- a/estilo.css
+++ b/estilo.css
@@ -4,9 +4,8 @@
 
 /* Padrão */
 :root {
-  --pagina1-color: #d2daff;
+  
   --text-color: #111111;
-
   --cor-pagina1:#d7fbe8;
   --cor-pagina2:#d2daff;
   --cor-primaria: #62d2a2;
@@ -19,14 +18,15 @@
   --cor-texto-destaque: #000000;
   --cor-botao-hover: #4bbd93;
   --cor-hover-secundaria: #42c2ff;
-  --cor-branco: #ffffff;
+  --cor-branco: #fff6f6;
   --cor-preto: #000000;
   --cor-sombra: rgba(0, 0, 0, 0.15);
   --cor-sombra-ativa: rgba(0, 0, 0, 0.25);
 }
 /* Quando acessibilidade está ativa */
 [data-acessivel="true"] {
-  --bg-color-pagina1: #f5f5f5; /* Fundo claro, quase branco, para alto contraste */
+  --cor-pagina1: #c8e6d6;
+  --cor-pagina2: #b3cde0;
   --cor-botao-hover: #3a8c70; /* Tom mais escuro e saturado para hover, visível para deuteranopia */
   --cor-branco: #ffffff; /* Mantido como branco puro */
   --cor-destaque: #0077b6; /* Azul forte, visível para todos os tipos de daltonismo */
@@ -76,7 +76,7 @@ button#acessibilidadeToggle {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-
+  
 button#acessibilidadeToggle.ativo {
   background-color: #009e73;
 }
